--- a/readme
+++ b/readme
@@ -1,7 +1,7 @@
 Assignment 1 readme File
 
 ------------------------------------------------------------------------
-What is your name?
+What is your name? Sadat Ahmed
 
 
 
@@ -11,6 +11,7 @@ assignment? COPY THE LIST of authorized sources of information given
 in the "Policies" web page (also available on armlab in the file
 ~cos217/AuthorizedSourcesList ) to this section of the readme file,
 and edit it as appropriate.
+None
 
 
 
@@ -25,7 +26,7 @@ may trigger a course penalty, and depending on the nature of the
 interaction, may additionally require the interaction being reported
 to the Committee on Discipline. Write "None" if you used no
 unauthorized sources of information.
-
+None
 
 
 ------------------------------------------------------------------------
@@ -35,7 +36,7 @@ enter your name in the space below the following affirmation:
 
 This paper represents my own work in accordance with University
 regulations.
-
+Sadat Ahmed
 
 
 ------------------------------------------------------------------------
@@ -44,10 +45,14 @@ Regulations in Princeton's Rights, Rules, Responsibilities guide,
 and the COS 217 Generative AI policy, disclose and describe how you
 used AI in completing this assignment:
 
+none
+
 
 
 ------------------------------------------------------------------------
 What is your assessment of the assignment? Was it helpful? Was it fun?
+
+Yes, it was helpful and fun. I got good experience with states.
 
 
 
